--- a/hw-styles.css
+++ b/hw-styles.css
@@ -74,7 +74,7 @@ section#teaser{
 }
 
 .email-form{text-align: left; vertical-align: middle; height: 70px; margin: 70px auto 110px auto; background: #ffffff; max-width: 630px; }
-.team-img img{margin: 0; padding: 0;}
+.team-img img{margin: 0; padding: 0; width: 100%;}
 
 
 /*=================================================*/
