Stylesheet update and form include

--- a/hw-styles.css
+++ b/hw-styles.css
@@ -73,7 +73,7 @@ section#teaser{
 	z-index: 10;
 }
 
-.email-form{text-align: left; vertical-align: middle; height: 70px; margin: 70px auto 110px auto; background: #ffffff; max-width: 630px; }
+.email-form{text-align: left; vertical-align: middle; height: 70px; margin: 40px auto 110px auto; max-width: 630px; }
 .team-img img{margin: 0; padding: 0; width: 100%;}
 
 
