--- a/css/hw-styles.css
+++ b/css/hw-styles.css
@@ -94,7 +94,7 @@ h2 {font-size: 26px; margin: 2px }
   position: absolute;
   z-index: -1;   
 }
-
+.email-form{margin: 40px 0px 110px 20px; }
 }
 
 
@@ -122,6 +122,6 @@ h2 {font-size: 26px; margin: 2px }
   z-index: -1;   
 }
 
-
+.email-form{margin: 40px 0px 110px 20px; }
 
 }
